fix: change alignment of form title and form fields in contact page on ipad portrait media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -808,6 +808,8 @@ input[type=reset]{
   input[type=reset]{
     background-color: orange;
   }
+  
+  
   .basepic{
     display: none;
   }
@@ -1273,7 +1275,7 @@ input[type=reset]{
 
 input[type=text],input[type=email],input[type=date],textarea{
 width: 540px;
-margin-bottom: 20px !important;
+margin-bottom: 40px !important;
 
 }
 textarea{
@@ -1297,9 +1299,10 @@ form label {
 font-size: 90%;
 }
 .pos-bookingform h3 {
+margin-top: 30px;
 text-transform: uppercase;
 font-size: 130%;
-margin-bottom: 20px;
+margin-bottom: 40px;
 }
 
 
